--- a/config/local.yaml
+++ b/config/local.yaml
@@ -1,5 +1,10 @@
 env: "local"
 http_server:
-  address: "localhost:8080"
+  address: "0.0.0.0:8080"
   timeout: 4s
   idle_timeout: 60s
+db:
+  username: postgres
+  host: db
+  port: "5432"
+  name: AvitoTest
